@@ -23,6 +23,8 @@ defined('_JEXEC') or die;
  * fef_reset            Should I reset the CSS styling for basic HTML elements inside the FEF container? Default: true
  * custom_css           Comma-separated list of custom CSS files to load _after_ the main FEF CSS file, e.g.
  *                      media://com_foo/css/bar.min.css,media://com_foo/css/baz.min.css
+ * remove_wrapper_classes  Comma-separated list of classes to REMOVE from the container
+ * add_wrapper_classes     Comma-separated list of classes to ADD to the container
  *
  * @package FOF30\Render
  */
@@ -76,7 +78,45 @@ class FEF extends Joomla3
 	 */
 	protected function openPageWrapper($classes)
 	{
-		$customClasses = implode($classes, ' ');
+		/**
+		 * Remove wrapper classes. By default these are classes for the Joomla 3 sidebar which is not used in FEF
+		 * components anymore.
+		 */
+		$removeClasses = $this->getOption('remove_wrapper_classes', [
+			'j-toggle-main',
+			'j-toggle-transition',
+			'row-fluid',
+		]);
+
+		if (!is_array($removeClasses))
+		{
+			$removeClasses = explode(',', $removeClasses);
+		}
+
+		$removeClasses = array_map('trim', $removeClasses);
+
+		foreach ($removeClasses as $class)
+		{
+			$x = array_search($class, $classes);
+
+			if ($x !== false)
+			{
+				unset($classes[$x]);
+			}
+		}
+
+		// Add the following classes to the wrapper div
+		$addClasses = $this->getOption('add_wrapper_classes', '');
+
+		if (!is_array($addClasses))
+		{
+			$addClasses = explode(',', $addClasses);
+		}
+
+		$addClasses = array_map('trim', $addClasses);
+
+		$customClasses = implode(array_unique(array_merge($classes, $addClasses)), ' ');
+
 		echo <<< HTML
 <div id="akeeba-renderer-fef" class="akeeba-renderer-fef $customClasses">
 
